--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
             <div class="card-body">
                 <div class="row align-items-center">
                     <div class="col">
-						<div class="h4 mb-2"><div class="yazi2">Sowwyz</div></div>
+						<div class="h4 mb-2"><div class="yazi2">Polatalemdar330</div></div>
                         <div class="mb-2">  <div class="yazi">Kimlik Oluşturucu</div>  </div>
 					</div>
                     <div class="col-auto d-none d-lg-block">
